// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationBanner > styles > should render a promotional banner 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  border-radius: 16px;
  background-color: var(--cui-bg-subtle);
  overflow: hidden;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 24px;
  padding-right: 8px;
  max-width: 420px;
}

.circuit-2 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 2rem;
  line-height: 2.25rem;
  font-size: 1.125rem;
  line-height: 1.5rem;
  margin-bottom: 8px;
}

@media (min-width: 768px) {
  .circuit-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

.circuit-3 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 8px;
}

@media (min-width: 768px) {
  .circuit-3 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

.circuit-4 {
  padding-top: calc(4px - 1px);
  padding-bottom: calc(4px - 1px);
}

@media (min-width: 768px) {
  .circuit-4 {
    padding-top: calc(12px - 1px);
    padding-bottom: calc(12px - 1px);
  }
}

.circuit-5 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  border-radius: 0 16px 16px 0;
  min-width: 0;
  width: 100px;
  height: auto;
  object-fit: contain;
  object-position: center;
}

<div>
  <div
    class="circuit-0"
    style="opacity: 1; height: 0px; visibility: visible;"
  >
    <div
      class="circuit-1"
    >
      <h2
        class="circuit-2"
      >
        Software update
      </h2>
      <p
        class="circuit-3"
      >
        There is updated firmware available for your card reader
      </p>
      <button
        class="_base_892426 _focus-visible_73b4bb _giga_892426 _primary_892426 circuit-4"
      >
        <span
          class="_base_2b3edd _byte_2b3edd _spinner_892426"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          Update
        </span>
      </button>
    </div>
    <img
      alt="Update"
      class="circuit-5"
      src="/images/software_update.png"
      width="100"
    />
  </div>
</div>
`;

exports[`NotificationBanner > styles > should render with default styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  border-radius: 16px;
  background-color: var(--cui-bg-accent);
  overflow: hidden;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 24px;
  padding-right: 8px;
  max-width: 420px;
}

.circuit-2 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 2rem;
  line-height: 2.25rem;
  font-size: 1.125rem;
  line-height: 1.5rem;
  margin-bottom: 8px;
}

@media (min-width: 768px) {
  .circuit-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

.circuit-3 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 8px;
}

@media (min-width: 768px) {
  .circuit-3 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

.circuit-4 {
  padding-top: calc(4px - 1px);
  padding-bottom: calc(4px - 1px);
}

@media (min-width: 768px) {
  .circuit-4 {
    padding-top: calc(12px - 1px);
    padding-bottom: calc(12px - 1px);
  }
}

.circuit-5 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  border-radius: 0 16px 16px 0;
  min-width: 0;
  width: 100px;
  height: auto;
  object-fit: contain;
  object-position: center;
}

<div>
  <div
    class="circuit-0"
    style="opacity: 1; height: 0px; visibility: visible;"
  >
    <div
      class="circuit-1"
    >
      <h2
        class="circuit-2"
      >
        Software update
      </h2>
      <p
        class="circuit-3"
      >
        There is updated firmware available for your card reader
      </p>
      <button
        class="_base_892426 _focus-visible_73b4bb _giga_892426 _primary_892426 circuit-4"
      >
        <span
          class="_base_2b3edd _byte_2b3edd _spinner_892426"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          Update
        </span>
      </button>
    </div>
    <img
      alt="Update"
      class="circuit-5"
      src="/images/software_update.png"
      width="100"
    />
  </div>
</div>
`;
